# Snake

./: README.md
src/: Doxyfile  Makefile  instruction.dox
src/brick_game/: defines.h
src/brick_game/snake/: snake_controller.cpp  snake_controller.h  snake_model.cpp  snake_model.h
src/brick_game/tetris/: objects.h  tetris_desktop_translate.cpp  tetris_desktop_translate.h  tetris_fsm.c  tetris_fsm.h  tetris_logic.c  tetris_logic.h  tetris_main_cycle.c  tetris_main_cycle.h
src/gui/: input.h
src/gui/cli/: cli_main.cpp  cli_main.h  console_view.c  console_view.h  ncurses_defines.h
src/gui/desktop/: CMakeLists.txt  buttons.cpp  buttons.h  desktopview.cpp  desktopview.h  game.cpp  game.h  helpfield.cpp  helpfield.h  main.cpp  mainwindow.cpp  mainwindow.h
src/tests/: tests.cpp
